<resources>
    <string name="app_name">Исполнители</string>
    <string name="bla_bla">
        У лукоморья дуб зелёный;\n
        Златая цепь на дубе том:\n
        И днём и ночью <b>кот учёный</b>\n
        Всё ходит по цепи кругом;\n
        Идёт <b>направо</b> - песнь заводит,\n
        <b>Налево</b> - сказку говорит.</string>
    <string name="musician_label">Name Surname</string>
    <string name="id">100500</string>
    <string name="name">John Doe</string>
    <string name="genres">pop, rock</string>
    <string name="tracks">100 песен</string>
    <string name="albums">500 альбомов</string>
    <string name="link">http://example.com</string>
    <string name="biography_title">Биография</string>
    <string name="description">Дима Николаевич Билан - российский певец, более известный как Дима Билан. В июне 2008 года принял данный псевдоним в качестве настоящего имени и фамилии.</string>
</resources>